# imesw

./: .editorconfig  .eslintrc.cjs  .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: actionlint.yml  ci.yml  release.yml
src/: App.tsx  main.rs  main.tsx  watcher.rs  windows_hook.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  config.rs  gui.rs  handler.rs  hook.rs  ime.rs  ime_manager.rs  keyboard.rs  main.rs  setting.rs  setup.rs  tray.rs  watcher.rs  window.rs
src/hooks/: useEnabled.ts
