[package]
name = "alt-ime-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.2.5"
windows = { version = "0.44.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Input_Ime", "Win32_Globalization", "Win32_System_Threading"] }
