[package]
name = "imesw"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0.82"
dirs-next = "2.0.0"
once_cell = "1.19.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tauri = { version = "2.0.0", features = ["shell-open", "system-tray"] }
windows = { version = "0.57.0", features = [
  "Win32",
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_UI",
  "Win32_UI_Input",
  "Win32_UI_Input_Ime",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
